--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,26 @@
       name="description"
       content="Make a list, check it once! All your lists in one place, without the confusion and bloat."
     />
+    <meta
+      property="og:description"
+      content="Make a list, check it once! All your lists in one place, without the confusion and bloat."
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/PrinceCorwin/iList/blob/main/src/images/list-on-desk.jpg?raw=true"
+    />
+    <meta property="og:url" content="https://personallistapp.netlify.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="iLIST Personal List App" />
+    <meta
+      name="twitter:description"
+      content="Make a list, check it once! All your lists in one place, without the confusion and bloat."
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/PrinceCorwin/iList/blob/main/src/images/list-on-desk.jpg?raw=true"
+    />
+    <meta name="twitter:creator" content="@stevecorwin9" />
     <link
       rel="apple-touch-icon"
       href="%PUBLIC_URL%/favicon_io/apple-touch-icon.png"
